--- a/Producer/Producer.csproj
+++ b/Producer/Producer.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\NoLagClient\NoLagClient.csproj" />
+    </ItemGroup>
+
 </Project>
